other button working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
     <link rel="stylesheet" href="./app.css" />
-    <title>Level Up Front Hackathon admin</title>
+    <title>ADELEKE MATTHEW -Level Up Front Hackathon admin</title>
   </head>
   <body>
     <!-- navbar component -->
