--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ADELEKE MATTHEW -Level Up Front Hackathon admin</title>
     <meta name="description" content="Hackathon, shopify, admin, Level up front hackathon" />
     <meta name="keywords" content="shopify, admin, hackathon dashboard, level up front hackathon" />
     <meta name="author" content="Adeleke Matthews Abiola" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+   
 
     <link rel="stylesheet" href="./app.css" />
-    <title>ADELEKE MATTHEW -Level Up Front Hackathon admin</title>
   </head>
   <body>
     <!-- navbar component -->
@@ -290,7 +294,7 @@
         <div class="setup_wrap_content mt-5">
             <!-- progress bar -->
           <div class="container items gap1">
-            <div class="text-sm" id="steppingProgress">1 / 5 completed</div>
+            <div class="text-sm" id="steppingProgress">0 / 5 completed</div>
             <div class="bar">
               <div class="progress"></div>
             </div>
